packages/svelte/tests/validator/samples/window-binding-invalid-innerwidth/input.svelte
<script>
    let w;
</script>

<svelte:window bind:innerwidth={w}/>
