packages/svelte/tests/compiler-errors/samples/runes-wrong-state-placement-3/main.svelte
<script>
	function a() {
		let ref = { a: 1 };
		return $state(ref);
	}

	function b() {
		let ref = 1;
		return $state(ref);
	}
</script>
